fixing the update users function and adding validation in the bearer token swagger
